--- a/templates/mobile_view.html
+++ b/templates/mobile_view.html
@@ -37,11 +37,12 @@
     // Request initial character position
     socket.on('start_camera', () => {
     startCamera();
+    console.log("Camera started");
+
 });
 
 socket.on('connect', () => {
     socket.emit('request_position');
-    // startCamera(); <-- REMOVE this line
 });
 
 
@@ -55,17 +56,18 @@ socket.on('connect', () => {
             const canvas = document.createElement('canvas');
             const context = canvas.getContext('2d');
 
-            // Set canvas size based on video resolution
             video.addEventListener('loadedmetadata', () => {
                 canvas.width = video.videoWidth;
                 canvas.height = video.videoHeight;
 
                 // Start capturing frames
                 setInterval(() => {
-                    context.drawImage(video, 0, 0, canvas.width, canvas.height);
-                    const dataURL = canvas.toDataURL('image/jpeg');
-                    socket.emit('mobile_camera_frame', { frame: dataURL });
-                }, 100);
+    context.drawImage(video, 0, 0, canvas.width, canvas.height);
+    const dataURL = canvas.toDataURL('image/jpeg');
+    socket.emit('mobile_camera_frame', { frame: dataURL });
+    console.log("Sent frame to server");
+}, 500); 
+
             });
         } catch (err) {
             console.error('Camera access denied:', err);
