--- a/templates/mobile_view.html
+++ b/templates/mobile_view.html
@@ -63,8 +63,9 @@ socket.on('connect', () => {
                 // Start capturing frames
                 setInterval(() => {
     context.drawImage(video, 0, 0, canvas.width, canvas.height);
-    const dataURL = canvas.toDataURL('image/jpeg').split(',')[1];
+    const dataURL = canvas.toDataURL('image/jpeg').split(',')[1];  //removes the prefix
     socket.emit('mobile_camera_frame', { frame: dataURL });
+
     console.log("Sent frame to server");
 }, 500); 
 
